-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u191, jfx11
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229430 | jfx11.0.4 | Arunprasad Rajkumar | P3 | Closed | Fixed | |
| JDK-8219576 | 8u221 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b01 |
A DESCRIPTION OF THE PROBLEM :
Scrollbars stack on top of everything that overlaps. As far as I can assume, the scrollbars rendered in the WebView are absolute, and do not take in consideration everything else from the DOM tree. They also overlap elements from the edge of an overflowing container (i.e. icons, text) if these elements do not have enough padding, instead of making all of the elements shift to the left when the scrollbar appears.
Examples:
* Triggering a dropdown, which is in front of a container with a scrollbar in it, the scrollbar will be in front of the content of the dropdown, making it unreadable;
* Triggering a modal functionality, the scrollbar will be in front of the overlay from the background
REGRESSION : Last worked in version 8u181
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
1. Open a JavaFX Browser Webview
2. Navigate to a page which has a scrollbar and a conflicting functionality (i.e. Modal, Dropdown overlapping): for example https://mdbootstrap.com/docs/jquery/modals/basic/
3. Trigger this conflicting functionality
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
The scrollbar should stay linked to its container, with the corresponding z-index
ACTUAL -
The scrollbar gets in front of everything, with a higher z-index
CUSTOMER SUBMITTED WORKAROUND :
For now, I have hidden the scrollbars from the Front-End when I triggered this conflicting functionality
FREQUENCY : always
Scrollbars stack on top of everything that overlaps. As far as I can assume, the scrollbars rendered in the WebView are absolute, and do not take in consideration everything else from the DOM tree. They also overlap elements from the edge of an overflowing container (i.e. icons, text) if these elements do not have enough padding, instead of making all of the elements shift to the left when the scrollbar appears.
Examples:
* Triggering a dropdown, which is in front of a container with a scrollbar in it, the scrollbar will be in front of the content of the dropdown, making it unreadable;
* Triggering a modal functionality, the scrollbar will be in front of the overlay from the background
REGRESSION : Last worked in version 8u181
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
1. Open a JavaFX Browser Webview
2. Navigate to a page which has a scrollbar and a conflicting functionality (i.e. Modal, Dropdown overlapping): for example https://mdbootstrap.com/docs/jquery/modals/basic/
3. Trigger this conflicting functionality
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
The scrollbar should stay linked to its container, with the corresponding z-index
ACTUAL -
The scrollbar gets in front of everything, with a higher z-index
CUSTOMER SUBMITTED WORKAROUND :
For now, I have hidden the scrollbars from the Front-End when I triggered this conflicting functionality
FREQUENCY : always
- backported by
-
JDK-8219576 Scrollbars from web pages appear to be absolute, overlapping everything
-
- Resolved
-
-
JDK-8229430 Scrollbars from web pages appear to be absolute, overlapping everything
-
- Closed
-
- duplicates
-
JDK-8217623 WebView: foreground element displayed below scrollbar of background element
-
- Closed
-
-
JDK-8223005 WebView scrollbars overlap page content
-
- Closed
-
- relates to
-
JDK-8273827 Scrollbars from web pages are still overlapping content
-
- Open
-
- links to
(1 links to)