8215775: Scrollbars from web pages appear to be absolute, overlapping everything

Reviewed-by: kcr, mbilla